cluster/apps/k8up/networkpolicies/k8up-jobs-egress-minio.yaml
---
apiVersion: cilium.io/v2
kind: CiliumClusterwideNetworkPolicy
metadata:
  name: k8up-jobs-egress-minio
spec:
  description: Allow k8up jobs to connect to minio
  endpointSelector:
    matchLabels:
      io.cilium.k8s.namespace.labels.k8up: backup-enabled
      k8upjob: "true"
  egress:
    - toEndpoints:
        - matchLabels:
            "k8s:io.kubernetes.pod.namespace": kube-system
            k8s-app: kube-dns
      toPorts:
        - ports:
            - port: "53"
              protocol: UDP
          rules:
            dns:
              - matchPattern: "*"
    - toEntities:
        - host
      toPorts:
        - ports:
            - port: "6443" # kube-api
              protocol: TCP
    - toEndpoints:
        - matchLabels:
            app.kubernetes.io/instance: minio
            app.kubernetes.io/name: minio
            "k8s:io.kubernetes.pod.namespace": minio
      toPorts:
        - ports:
            - port: "9000"
              protocol: TCP
