cluster/apps/k8up/networkpolicies/k8up-jobs-egress-prometheus-pushgateway.yaml
---
apiVersion: cilium.io/v2
kind: CiliumClusterwideNetworkPolicy
metadata:
  name: k8up-jobs-egress-prometheus-pushgateway
spec:
  description: "allow k8up jobs to send metrics to pushgateway"
  endpointSelector:
    matchLabels:
      io.cilium.k8s.namespace.labels.k8up: backup-enabled
      k8upjob: "true"
  egress:
    - toEndpoints:
        - matchLabels:
            "k8s:io.kubernetes.pod.namespace": kube-system
            k8s-app: kube-dns
      toPorts:
        - ports:
            - port: "53"
              protocol: UDP
          rules:
            dns:
              - matchPattern: "*"
    - toEndpoints:
        - matchLabels:
            app.kubernetes.io/instance: prometheus-pushgateway
            app.kubernetes.io/name: prometheus-pushgateway
            "k8s:io.kubernetes.pod.namespace": monitoring
      toPorts:
        - ports:
            - port: "9091"
              protocol: TCP
